# pyspec

./: .gitignore  INSTRUCTIONS.md  pyproject.toml  requirements.txt  setup.py
PySpec.xcodeproj/: project.pbxproj
PySpec.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
app/: pyspec_app.py
data/: calibration_example_JiC.fit
dev_tools/: pylint_check.sh  yapf_formatting.sh
pyspec/: __init__.py  _version.py  calibration.py  errors.py  image.py  spectrum.py
pyspec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyspec/app/: __init__.py  add_calibration_point_dialog.py  calibration_point_list_dialog.py  environment.py  error_dialog.py  image_view.py  image_window.py  load_actions.py  main_window.py  pyspec_app.py  q_push_button_index.py  rotate_image_dialog.py  spectrum_view.py  success_dialog.py  test.py  utils.py
src/: pyspec.py  pyspec_test.py  spectrum.py
src/errors/: error.py  prova.txt  spectrum_calibration_error.py  spectrum_error.py  spectrum_extraction_error.py  spectrum_file_error.py  spectrum_format_error.py  spectrum_name_error.py  spectrum_type_error.py
src/test/: img_9969_wave_solution.pkl  test_image_cal_wave_solution.pkl
